mobile: menu: trying to fix weird button rounding on safari

--- a/app/assets/stylesheets/navigation.css
+++ b/app/assets/stylesheets/navigation.css
@@ -14,6 +14,8 @@
 		width:14vw;
 		height:14vw;
 		font-size:9vw;
+		-webkit-appearance: none;
+  		-webkit-border-radius: 1vw;
 	}
 	#m-primary-nav .menu ul {
 		margin: 0;
